Fix for search arrow breaking on mobile work10m

--- a/src/sass/templates/_thank-you.scss
+++ b/src/sass/templates/_thank-you.scss
@@ -26,6 +26,13 @@
     }
   }
 
+  @media(max-width: $tablet-breakpoint) {
+    input[type="search"] {
+      width: 65%;
+    }
+  }
+
+  
   .tab {
     @include tab();
     background: $color-light-blue;
